--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     body { margin: 0; overflow: hidden; }
     video { display: none; }
   </style>
+  <script type="importmap">
+{
+  "imports": {
+    "three": "https://cdn.jsdelivr.net/npm/three@0.178.0/build/three.module.js",
+    "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.178.0/examples/jsm/"
+  }
+}
+</script>
 </head>
 <body>
 <script type="module" src="./main.js"></script>
